# fedbench

./: .gitignore  CHANGELOG.md  CITATION.cff  CLAUDE.md  README.md  create_csv.py  main.py  mkdocs.yml  plot_divergence.py  pyproject.toml  requirements.txt  temp.md  test_data.csv
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: api.md  extending.md  index.md  study.md
examples/: README.md  basic_simulation.py  demo_cross_silo_fl.py  demo_encrypted_fl.py  divergence_analysis.py  example_bulyan_mom.py  example_byzantine_robust.py  example_dp_and_secure_agg.py  example_dp_encryption.py  example_elasticnet_poisson.py  example_huber_robust_regression.py  example_mnist_federated.py  example_new_models.py  example_privacy_utility_curve.py  example_robust_aggregation.py  example_svm_lasso.py  thesis_integration_demo.py  thesis_utils.py  visualization_demo.py
fed_playground/: __init__.py
fed_playground/src/: __init__.py  aggregation.py  benchmark.py  cli.py  dataloader.py  encryption.py  environment.py  models.py  orchestrator.py  party.py  utils_data.py  visualization.py
tests/: test_aggregation.py  test_encryption.py  test_models.py  test_phase2.py  test_visualization.py
