[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fed-env"
version = "0.1.0"
description = "A modular, pure-NumPy federated learning simulation and benchmark framework for research and education"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "fed-env contributors" }]
requires-python = ">=3.11,<3.13"
keywords = [
    "federated-learning",
    "differential-privacy",
    "secure-aggregation",
    "byzantine-robustness",
    "machine-learning",
    "privacy",
    "benchmark",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security :: Cryptography",
    "Typing :: Typed",
]
dependencies = [
    "matplotlib>=3.7",
    "numpy>=1.24",
    "pandas>=2.0",
]

[project.urls]
Homepage = "https://github.com/your-org/fed-env"
Repository = "https://github.com/your-org/fed-env"
Issues = "https://github.com/your-org/fed-env/issues"
Changelog = "https://github.com/your-org/fed-env/blob/main/CHANGELOG.md"

[project.optional-dependencies]
fhe = [
    "concrete-ml>=1.9.0",
]
examples = [
    "scikit-learn>=1.3",
    "tqdm>=4.65",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "black>=24.0",
    "isort>=5.13",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["fed_playground*"]

[tool.setuptools.package-data]
fed_playground = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.black]
line-length = 88
target-version = ["py311", "py312"]

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "ANN", # flake8-annotations (type hints)
    "RUF", # ruff-specific rules
]
ignore = [
    "B006",   # mutable default args — documented per occurrence
    "N803",   # uppercase argument names (X, y) are standard ML convention
    "N806",   # uppercase variable names (X, X_train …) are standard ML convention
    "RUF002", # multiplication sign × in docstrings is intentional math notation
    "ANN401", # Any is genuinely needed for encryption scheme interop
    "ANN003", # **kwargs annotation not required in plotting helpers
    "E501",   # long lines in docstrings — black handles code lines
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN"]       # no annotations required in tests
"examples/*" = ["ANN", "T201"]  # no annotations / allow print in examples

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
